logs/dfuzz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dfuzz'...
Listing './lib/python3.5/site-packages/dfuzz/cfg'...
Listing './lib/python3.5/site-packages/dfuzz/comb'...
Listing './lib/python3.5/site-packages/dfuzz/core'...
Compiling './lib/python3.5/site-packages/dfuzz/core/handler.py'...
***   File "./lib/python3.5/site-packages/dfuzz/core/handler.py", line 88
    self.cfg.incident_reproduce), 0755)
                                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dfuzz/core/utils.py'...
***   File "./lib/python3.5/site-packages/dfuzz/core/utils.py", line 70
    os.chmod(run_script, 0755)
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/dfuzz/gen'...
Listing './lib/python3.5/site-packages/dfuzz/mut'...
Listing './lib/python3.5/site-packages/dfuzz/tests'...
Listing './lib/python3.5/site-packages/dfuzz/tests/dummy'...
Compiling './lib/python3.5/site-packages/dfuzz/tests/test_sanity.py'...
***   File "./lib/python3.5/site-packages/dfuzz/tests/test_sanity.py", line 52
    os.chmod(self.test_dir, 0555)
                               ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/dfuzz-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
